--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html itemscope="" itemtype="http://schema.org/Product" prefix="og: http://ogp.me/ns#" lang="en">
 	<head>
+		<head><meta charset="UTF-8">
 		<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 		<html xmlns="http://www.w3.org/1999/xhtml" lang="ja" prefix="og: http://ogp.me/ns#">
 		<meta http-equiv ="content-type" content="text/html; charset=UTF-8"/>
