--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
 		<meta http-equiv ="content-type" content="text/html; charset=UTF-8"/>
 		<title>webEdition</title>
 	</head>
-	<body style="background-color:#F3F7FF;border-top:1px solid black;margin:0;padding:0;"></body>
+	<body style="background-color:#F3F7FF;border-top:1px solid black;margin:0;padding:0;"><body class="R"><div class="R fmv"><div class="Y R"><span class="R"></span><img class="o6 R" src="https://www.kixeye.com/game/warcommander/i/browser-updater-icon.png" width="64" height="64" title="Browser Update Checker"><h1 class="R">Browser Update Checker</h1><strong class="PchK R">For your security and privacy</strong></div><div class="lz R"><a class="R w" href="https://www.kixeye.com/game/warcommander/">Main</a><span class="R"><i class="R"></i></span><div class="ek R">
+Contribute</div><a class="xaao R" href="https://www.kixeye.com/game/warcommander/support.html">Feedback</a><a class="R E" href="https://www.kixeye.com/game/warcommander/news.html" target="_blank">News</a></div><div class="vTmQ R">Advertisements</div><span class="R"></span><div class="D Mg R"><b class="R"></b>
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Cinema Browser Leader Top -->
+<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-0740458829455055" data-ad-slot="7677956577"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div><div class="Q R"><h2 class="R" title="The future is yet in your power.">Keep Your Browser Up-to-Date</h2><p class="R"> Today, in your everyday life, you use the Internet for almost everything: to send emails, pay bills, follow the news, stay in touch with friends and family, watch the videos, listen to music and etc. Your web browser is the key to access online world. Therefore, it's very important to keep your web browser fresh and up-to-date. </p>
+<h2 class="R">Check for Updates …</h2><p class="R"> If you are using an outdated web browser, you risk having your computer compromised by viruses, malware and other security issues. For <strong class="R">your own security and privacy</strong>, for a <strong class="R">better browsing experience</strong> and getting the most out of the internet, we strongly recommend that you use the latest version of your preferred browser. </p><div class="R vix"><h3 class="R RSMy">Update Checker for Google Chrome™</h3>
+<button class="eO CtC R bd">Check for Updates…</button><div class="R pXz M"></div><div class="M R Pg8j"><svg width="64" height="64" class="R" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path class="R" fill="#fdd901" d="M42 32c0-5.5 0 5.5 0 0zm-.3-10a14 14 0 0 1 1.8 18L32 60a28 28 0 0 0 26.1-38z"></path><path class="R" fill="#5bc15b" d="M7.7 18A27.9 27.9 0 0 0 27 59.6l8-13.7 1-.4a14.1 14.1 0 0 1-8.2 0l-1.1-.5a14 14 0 0 1-7-6.3v-.2L7.7 18.1z"></path><path class="R" fill="#e93c35" d="M32 4a28 28 0 0 0-21.3 9.8l8 13.8A14 14 0 0 1 32 18h24.3A28 28 0 0 0 32 4zM22 32c0 5.5 0-5.5 0 0z"></path>
+<path class="R" fill="#0d6cac" d="M32 22a10 10 0 1 0 0 20 10 10 0 0 0 0-20z"></path></svg></div><div class="ly R">The future is yet in your power!</div><div class="R"><b class="vB R">You have version: </b><span class="Fj R">68.0.3440.84</span></div></div></div><div class="R qbBS Mg">
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Cinema Browser Leader Bottom -->
+<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-0740458829455055" data-ad-slot="9173307972"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div><p class="Kv Q R"><u class="wbL qn R">Back to Top</u></p><div class="Yk R"> Everything is © Copyright by <a class="R mCM" href="https://www.mixesoft.com/" title="Mixesoft" target="_blank">Mixesoft</a>, unless otherwise indicated <div class="ZJ R">
+<a class="EV R" href="https://www.kixeye.com/game/warcommander/privacy.html" title="Privacy policy">Privacy</a> |<a class="de R" href="https://www.kixeye.com/game/warcommander/terms.html" title="Terms of use">Terms</a> |<a class="OX R" href="https://www.kixeye.com/game/warcommander/support.html" title="Contact us" target="_blank">Support</a> |<a class="R gEE" href="https://www.mixesoft.com/" title="Our Projects" target="_blank">Projects</a></div></div></div></body>
 </html>
