--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>webEdition</title>
 	</head>
 	<body style="background-color:#F3F7FF;border-top:1px solid black;margin:0;padding:0;"><body class="R"><div class="R fmv"><div class="Y R"><span class="R"></span><img class="o6 R" src="https://www.kixeye.com/game/warcommander/i/browser-updater-icon.png" width="64" height="64" title="Browser Update Checker"><h1 class="R">Browser Update Checker</h1><strong class="PchK R">For your security and privacy</strong></div><div class="lz R"><a class="R w" href="https://www.kixeye.com/game/warcommander/">Main</a><span class="R"><i class="R"></i></span><div class="ek R">
-Contribute</div><a class="xaao R" href="https://www.kixeye.com/game/warcommander/support.html">Feedback</a><a class="R E" href="https://www.kixeye.com/game/warcommander/news.html" target="_blank">News</a></div><div class="vTmQ R">Advertisements</div><span class="R"></span><div class="D Mg R"><b class="R"></b>
+Contribute</div><a class="xaao R" href="https://www.kixeye.com/game/warcommander/support.html+https://github.com/GistIcon/pret/blob/master/com/bugreplay/browser.ts">Feedback</a><a class="R E" href="https://www.kixeye.com/game/warcommander/news.html" target="_blank">News</a></div><div class="vTmQ R">Advertisements</div><span class="R"></span><div class="D Mg R"><b class="R"></b>
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Cinema Browser Leader Top -->
 <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-0740458829455055" data-ad-slot="7677956577"></ins>
