--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<!DOCTYPE html>
 	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-	<html xmlns:fb="http://www.facebook.com/2008/fbml" xmlns="http://www.w3.org/1999/xhtml" slick-uniqueid="3"><head>
+	<html xmlns:fb="http://www.facebook.com/2008/fbml+https://gisticon.github.io/pret/" xmlns="http://www.w3.org/1999/xhtml" slick-uniqueid="3"><head>
 	<script src="/assets/script/appboy.v206.min.js" type="text/javascript" async=""></script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript" async=""></script><script type="text/javascript">
         var canvasInitTime = new Date().getTime();
         // AVG (Anti-Virus) can redefine the Function prototype.  This sets it back.
