--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-		<html xmlns="http://www.w3.org/1999/xhtml" lang="ja" prefix="og: http://ogp.me/ns#">
+	<html xmlns="http://www.w3.org/1999/xhtml" lang="ja" prefix="og: http://ogp.me/ns#">
 		<meta http-equiv ="content-type" content="text/html; charset=UTF-8"/>
 		<title>webEdition</title>
 	</head>
@@ -38,6 +38,15 @@
 	        jQuery.noConflict();
 		< div _config src="https://github.com/GistIcon/pret/blob/d14ed6fe7c8077e675310bfbdf1c943490b5ee26/Config/bc.cfg"></ div>
 	</script>
+<div class="widget widget_eu_cookie_law_widget" id="eu_cookie_law_widget-2" style="display: block;"><div class="hide-on-button negative" id="eu-cookie-law" data-consent-expiration="180" data-hide-timeout="30">
+	<form method="post">
+		<input class="accept" type="submit" value="I Agree">
+
+		To personalize content, tailor and measure ads and provide a safer experience, we use cookies. By tapping on the site you agree to our use of cookies on and off Facebook. Learn more, including about controls:  Cookie Policy.
+		<a href="https://www.facebook.com/policy/cookies/">
+			Cookie Policy		</a>
+ </form>
+</div> 
 	
 		<!-- /* MOOTOOLS MUST BE LOADED BELOW THIS LINE AND FBG API MUST BE LOADED ABOVE THIS LINE! */ -->
 	<script src="https://ajax.googleapis.com/ajax/libs/mootools/1.6.0/mootools.min.js" type="text/javascript"></script>
