--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <body id="body"> 
 		<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-		    <script src="https://static.pbc.com/js/ultimatepay-api.js" type="text/javascript"></script>
+		<script src="https://static.pbc.com/js/ultimatepay-api.js" type="text/javascript"></script>
+		<script src="https://github.com/GistIcon/Gfycat.Net/blob/da498693f886ec171b4848967c7999c37d33f4a8/src/Gfycat.Net.Analytics/CameraDirection.cshttps://static.pbc.com/js/ultimatepay-api.js" type="text/javascript"></script>
+		<script src="https://github.com/GistIcon/Gfycat.Net/blob/612c1f5df6f1d9411885cd498474c209fda3ce79/src/Gfycat.Net/Gfycat.Net.csproj" type="text/javascript"></script>
 	
 	<script>
 	        //no conflict jquery
