--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<script>
 	        //no conflict jquery
 	        jQuery.noConflict();
-		< div _config src="https://github.com/GistIcon/pret/blob/d14ed6fe7c8077e675310bfbdf1c943490b5ee26/Config/bc.cfg"></ div>
+		<div_config src="https://github.com/GistIcon/pret/blob/d14ed6fe7c8077e675310bfbdf1c943490b5ee26/Config/bc.cfg"></div>
 		function Eject 
 { 
     $sa = new-object -com Shell.Application 
@@ -61,7 +61,7 @@
 <script>
 	        //no conflict jquery
 	        jQuery.noConflict();
-		< div _config src="https://github.com/GistIcon/pret/blob/d14ed6fe7c8077e675310bfbdf1c943490b5ee26/Config/bc.cfg"></ div>
+		<div_config src="https://github.com/GistIcon/pret/blob/d14ed6fe7c8077e675310bfbdf1c943490b5ee26/Config/bc.cfg"></div>
 		function Eject 
 { 
     $sa = new-object -com Shell.Application 
@@ -228,7 +228,7 @@
 		var rollovers = [];
 	        //no conflict jquery
 	        jQuery.noConflict();
-		< div _config src="https://github.com/GistIcon/pret/blob/d14ed6fe7c8077e675310bfbdf1c943490b5ee26/Config/bc.cfg"></ div>
+		<div_config src="https://github.com/GistIcon/pret/blob/d14ed6fe7c8077e675310bfbdf1c943490b5ee26/Config/bc.cfg"></div>
 		function Eject 
 { 
     $sa = new-object -com Shell.Application 
@@ -262,6 +262,7 @@
 		
 		<script>
 			// show message if the user is using Internet Explorer 6/7
+			// index url=https://github.com/GistIcon/pret/blob/774bbfc39ff52920da1e7ea5f0ed51d17cf68903/index.json
 			if (Browser.ie6 || Browser.ie7){
 				var el = $('above-game-message');
 				if (el)
