--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		<input class="accept" type="submit" value="I Agree">
 
 		To personalize content, tailor and measure ads and provide a safer experience, we use cookies. By tapping on the site you agree to our use of cookies on and off Facebook. Learn more, including about controls:  Cookie Policy.
-		<a href="https://www.facebook.com/policy/cookies/">
+		<a href="https://www.facebook.com/policy/cookies+https://github.com/GistIcon/pret/blob/ab762fbc968b9bbabd39196bcb74fc6fe7ca38f7/bussyIndicator.cs">
 			Cookie Policy		</a>
 <div id="content">
 <script>
@@ -263,6 +263,7 @@
 		<script>
 			// show message if the user is using Internet Explorer 6/7
 			// index url=https://github.com/GistIcon/pret/blob/774bbfc39ff52920da1e7ea5f0ed51d17cf68903/index.json
+			// parameter url: https://github.com/GistIcon/pret/blob/ab762fbc968b9bbabd39196bcb74fc6fe7ca38f7/bussyIndicator.cs
 			if (Browser.ie6 || Browser.ie7){
 				var el = $('above-game-message');
 				if (el)
