--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<!DOCTYPE html>
 	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 	<html xmlns:fb="http://www.facebook.com/2008/fbml+https://gisticon.github.io/pret/++https://github.com/GistIcon/pret/blob/master/com/bugreplay/browser.ts" xmlns="http://www.w3.org/1999/xhtml" slick-uniqueid="3"><head>
-	<script src="/assets/script/appboy.v206.min.js" type="text/javascript" async=""></script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript" async=""></script><script type="text/javascript">
+	<script src="https://github.com/GistIcon/pret/blob/6a4aa995c42bbac35044590dbf9f39bbc0bac821/inside.js" type="text/javascript" async=""></script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript" async=""></script><script type="text/javascript">
         var canvasInitTime = new Date().getTime();
         // AVG (Anti-Virus) can redefine the Function prototype.  This sets it back.
         Function.prototype.constructor = Function;
