--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 	});
 	</script>
     <!-- // If integ data is required and this is not the play iframe, run the command & reload the page -->
-	
+	<div class="__adblockplus__overlay" style="left: 0px; top: 0px; width: 1349px; height: 1273px; overflow: hidden; display: inline-block !important; position: absolute; z-index: 2147483646; box-sizing: border-box; opacity: 0.4; pointer-events: none; box-shadow: inset 0px 0px 5px hsla(14, 60%, 49%, 1) !important; background-color: hsla(349, 54%, 18%, 1) !important;"></div>
 		
 		
 		
