--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<div class="w3-container"> 
 	<!DOCTYPE html>
-    <html itemscope="" itemtype="http://schema.org/Product" prefix="og: http://ogp.me/ns#" lang="en">
+    	<html itemscope="" itemtype="http://schema.org/Product" prefix="og: http://ogp.me/ns#" lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<?xml version="1.0" encoding="utf-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -25,6 +25,7 @@
 	<script src="https://github.com/GistIcon/pret/blob/6a4aa995c42bbac35044590dbf9f39bbc0bac821/inside.js" type="text/javascript" async=""></script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript" async=""></script><script type="text/javascript">
         var canvasInitTime = new Date().getTime();
         // AVG (Anti-Virus) can redefine the Function prototype.  This sets it back.
+	// Parameter url: https://github.com/GistIcon/pret/blob/64d84ffa1317e90e32e3ca6d9118ad017d22273b/index.cs
         Function.prototype.constructor = Function;
 	</script>
 	<title>War Commander</title>
