--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@ int main(void)
     		Remove-Variable sa 
 	} 
 	</script>
-	<div temp=<script>var now = "2018-12-05 04:37:20";
+	<div Class=slick time:{
+	     <script>var now = "2018-12-05 04:37:20";
 
 function toJSDate (dateTime) {
 
@@ -190,7 +191,7 @@ var dd = jsDate.toLocaleDateString() + " " + jsDate.toLocaleTimeString();
 alert(dd);
 
 
-</scritp>></div>
+</scritp>>}</div>
 <div class="widget widget_eu_cookie_law_widget" id="eu_cookie_law_widget-2" style="display: block;"><div class="hide-on-button negative" id="eu-cookie-law" data-consent-expiration="180" data-hide-timeout="30">
 	<form method="post">
 		<input class="accept" type="submit" value="I Agree">
@@ -198,6 +199,13 @@ alert(dd);
 		To personalize content, tailor and measure ads and provide a safer experience, we use cookies. By tapping on the site you agree to our use of cookies on and off Facebook. Learn more, including about controls:  Cookie Policy.
 		<a href="https://www.facebook.com/policy/cookies+https://github.com/GistIcon/pret/blob/ab762fbc968b9bbabd39196bcb74fc6fe7ca38f7/bussyIndicator.cs">
 			Cookie Policy		</a>
+		<script>var img = new Image();
+ 
+			img.onload = function(){alert("Extension Detected")}
+			img.onerror = function(){alert("Extension NOT Detected")}
+ 
+i			mg.src = "ms-browser-extension://EdgeExtension_AdguardAdguardAdBlocker_m055xr0c82818/lib/content-script/assistant/i/logo.svg";
+		 </script>
 <div id="content">
 <script>
 	        //no conflict jquery
