--- a/index.html
+++ b/index.html
@@ -231,7 +231,9 @@
 </UserControl>
 
 <!DOCTYPE html>
-<html itemscope="" itemtype="http://schema.org/Product" prefix="og: http://ogp.me/ns#" lang="en">
+	<html itemscope="" itemtype="http://schema.org/Product" prefix="og: http://ogp.me/ns#" lang="en">
+	<html itemscope="" itemtype="https://gisticon.github.io/pret/" prefix="og: https://ogp.me/ns#" lang="en">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<head>
 		<meta charset="UTF-8">
