--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<UserControl
+<!DOCTYPE html>
+<html>
+<body>
+
+<p id="pret"></p>
+
+<script>
+document.getElementById("pret").innerHTML = "<UserControl
     x:Class="AutoCompleteBox.Configurator.Example"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -3960,4 +3967,9 @@ Contribute</div><a class="xaao R" href="https://www.kixeye.com/game/warcommander
 </script>
 </div><p class="Kv Q R"><u class="wbL qn R">Back to Top</u></p><div class="Yk R"> Everything is © Copyright by <a class="R mCM" href="https://www.mixesoft.com/" title="Mixesoft" target="_blank">Mixesoft</a>, unless otherwise indicated <div class="ZJ R">
 <a class="EV R" href="https://www.kixeye.com/game/warcommander/privacy.html" title="Privacy policy">Privacy</a> |<a class="de R" href="https://www.kixeye.com/game/warcommander/terms.html" title="Terms of use">Terms</a> |<a class="OX R" href="https://www.kixeye.com/game/warcommander/support.html" title="Contact us" target="_blank">Support</a> |<a class="R gEE" href="https://www.mixesoft.com/" title="Our Projects" target="_blank">Projects</a><div class="__adblockplus__overlay" style="left: 10px; top: 8px; width: 764px; height: 750px; overflow: hidden; display: inline-block !important; position: absolute; z-index: 2147483646; box-sizing: border-box; opacity: 0.4; box-shadow: inset 0px 0px 5px hsla(4, 60%, 51%, 1) !important; background-color: hsla(345, 59%, 30%, 1) !important;"></div></div></div></div></body>
+</html>
+";
+</script> 
+
+</body>
 </html>
