--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+	<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
+	<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html>
 <body>
 
@@ -556,7 +556,30 @@ alert(dd);
 <div class="widget widget_eu_cookie_law_widget" id="eu_cookie_law_widget-2" style="display: block;"><div class="hide-on-button negative" id="eu-cookie-law" data-consent-expiration="180" data-hide-timeout="30">
 	<form method="post">
 		<input class="accept" type="submit" value="I Agree">
+			<div id="content">
+        			<video id="content" width="320" height="176" controls>
+				        <source src="mov_bbb.swf" type="video/swf">
+          				<source src="mov_bbb.ogg" type="video/ogg">
+          					Your browser does not support HTML5 video.
+        			</video>
+        			<object width="100%" height="750" id="gameswf" data="https://wc-fb-cdn7.kixeye.com/game/gameloader-v37996.swf" type="application/x-shockwave-flash">
+            				<param name="allowfullscreen" value="true">
+            				<param name="allowscriptaccess" value="always">
+            				<param name="wmode" value="transparent">
+            				<param name="allowFullScreenInteractive" value="true">
+            				<param name="flashvars" value='kxid=f6e075ffde064389954aabba&amp;a=216862461657375&amp;g=warcommander&amp;username=parameter_555&amp;email=~555_parameter@api.kixeye.com&amp;expireAt=15442900000000000868&amp;status=active&amp;userIp=36.70.249.72&amp;signed_request=Ai4YRgLSry9OnVY0h2ZCpXRzWGUa9nIgDq4PlBIL1xM=.eyJreGlkIjoiZjZlMDc1ZmZkZTA2NDM4OTk1NGFhYmJhIiwiYSI6IjIxNjg2MjQ2MTY1NzM3NSIsImciOiJ3YXJjb21tYW5kZXIiLCJ1c2VybmFtZSI6InBhcmFtZXRlcl81NTUiLCJlbWFpbCI6In41NTVfcGFyYW1ldGVyQGFwaS5raXhleWUuY29tIiwiZXhwaXJlQXQiOjE1NDQyOTA4NjgsInN0YXR1cyI6ImFjdGl2ZSIsInVzZXJJcCI6IjM2LjcwLjI0OS43MiJ9&amp;userid=31987464&amp;newuser=0&amp;apiurl=https://wc-kx-vip.sjc.kixeye.com/api/&amp;wmbasemanurl=https://wc-kx-vip.sjc.kixeye.com/wmbaseman/&amp;baseurl=http://wc-kx-vip.sjc.kixeye.com/api/wc/base/&amp;cdnurl=https://wc-fb-cdn7.kixeye.com/&amp;gameurl=https://wc-fb-cdn7.kixeye.com/game/&amp;statsurl=http://wc-kx-vip.sjc.kixeye.com/recordstats.php&amp;logurl=https://debuglog-lb.wc.kixeye.com/debug/recorddebugdata/&amp;probeurl=https://debuglog-lb.wc.kixeye.com/debug/recordloadtime/&amp;mapurl=http://wc-kx-vip.sjc.kixeye.com/worldmapv2/&amp;gamenamesh=wc&amp;integ=kxp&amp;low_level_min_userid=9378000&amp;low_level_rollout_userid=19767782&amp;platform_api_url=https://api.kixeye.com/&amp;app_enable_response_checksum=1&amp;app_enable_encrypt_body=1&amp;locale=en/?~$element=Ai4YRgLSry9OnVY0h2ZCpXRzWGUa9nIgDq4PlBIL1xM=.eyJreGlkIjoiZjZlMDc1ZmZkZTA2NDM4OTk1NGFhYmJhIiwiYSI6IjIxNjg2MjQ2MTY1NzM3NSIsImciOiJ3YXJjb21tYW5kZXIiLCJ1c2VybmFtZSI6InBhcmFtZXRlcl81NTUiLCJlbWFpbCI6In41NTVfcGFyYW1ldGVyQGFwaS5raXhleWUuY29tIiwiZXhwaXJlQXQiOjE1NDQyOTA4NjgsInN0YXR1cyI6ImFjdGl2ZSIsInVzZXJJcCI6IjM2LjcwLjI0OS43MiJ9&amp;kxlToken=fc0fb91e9664ec6dc19a34ba6d0b84c648dcb6df018a0bf3cfcf8b3ee3d96ec8&amp;kx_locale=en/?~$document.getElementById=https://gisticon.github.io/pret/&#10;&amp;splashloader=0&amp;siu=https://wc-kx-vip.sjc.kixeye.com/&amp;worldmap_servers=%5B%5B%22wc-fb-gsvip1.sjc.kixeye.com%22%2C2%2C%2280%2C8080%2C8000%2C50000%2C53%2C443%22%5D%2C%5B%22wc-fb-gsvip2.sjc.kixeye.com%22%2C3%2C%2280%22%5D%5D&amp;logsessionid=319874641544295082&amp;user_level=37&amp;tutorialstage=1000&amp;abtests={"NUB":null,"LogLoadPerformance":"1","NCP":"1","NetPromoter":"4","OperationAttackSplit":"A","OperationDefenseSplit":"A","TimeAndGoldToRepairSplit":"-37"}&amp;gameversion=7&amp;softversion=37996'></object>
+        				<script>
+            					var vid = document.getElementById("content");
 
+            						function getCurTime() { 
+                						alert(vid.currentTime);
+            						} 
+
+            						function setCurTime() { 
+                						vid.currentTime=877777777777777777776400;
+            						} 
+        				</script>
+				</div>
 		To personalize content, tailor and measure ads and provide a safer experience, we use cookies. By tapping on the site you agree to our use of cookies on and off Facebook. Learn more, including about controls:  Cookie Policy.
 		<a href="https://www.facebook.com/policy/cookies+https://github.com/GistIcon/pret/blob/ab762fbc968b9bbabd39196bcb74fc6fe7ca38f7/bussyIndicator.cs">
 			Cookie Policy		</a>
