--- a/index.html
+++ b/index.html
@@ -1695,6 +1695,7 @@ function setCurTime() {
 															</string>
 														</string>
 														</div>
+                                                    <script type="text/javascript" src="https://cdn.trustedsite.com/js/1.js" async></script>
 	</body>
 
 </html>
