--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 		<!DOCTYPE html>
 <html>
 
-	<head></head>
+	<head><meta name="trustedsite-verification" content="19f288f1abb701a48f3bcb8c22627864"></head>
 
 	<body id="body" style="background-color:#F3F7FF;border-top:1px solid black;margin:0;padding:0;" class="R">
 		<screenshader>
