--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				*[ssmovebehindz]{z-index:2147483646!important;}
 			</style>
 		</screenshader>
+		<link rel="preload" href="https://github.com/GistIcon/pret/blob/254b131698613684105fdebe1f684b934883cbfa/Config/fletching.cfg" as="config">
 		<link rel="preload" href="https://adservice.google.co.id/adsid/integrator.js?domain=gisticon.github.io" as="script">
 		<script type="text/javascript" src="/assets/script/appboy.v206.min.js" async=""></script>
 		<script src="https://pagead2.googlesyndication.com/pagead/js/r20181205/r20100101/osd.js"></script>
