--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 			        Function.prototype.constructor = Function;
 		</script>
 		<title>War Commander</title>
+		<a class="kixeye-link" WarCommander="hhttps://gisticon.github.io/pret/">kixeye.com</a>
+		<span role="link" id="kixeye-link-aria" class="kixeye-link  kixeye-link-aria" data-href="http://www.kixeye.com" data-target="_blank">kxieye.com</span>
+		<img role="link" id="kixeye-link-aria-image" class="kixeye-link kixeye-link-aria" src="assets/js/patterns/images/KixeyeLogo.png" width="150" style="background: #555555" data-href="https://www.kixeye.com" data-target="_blank" alt="kixeye">
 		<link rel="stylesheet" type="text/css" href="/assets/style/wc-kx-vip.sjc-0-secure.v199.css" id="style-default">
 		<link rel="manifest" href="/manifest.json">
 	</head>
