--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<title>War Commander</title>
 		<link rel="stylesheet" type="text/css" href="/assets/style/wc-kx-vip.sjc-0-secure.v199.css" id="style-default">
 		<link rel="manifest" href="/manifest.json">
+		<meta name="trustedsite-verification" content="19f288f1abb701a48f3bcb8c22627864">
 	</head>
 
 	<body id="body">
