--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 		</script>
 		<title>War Commander</title>
 		<link rel="stylesheet" type="text/css" href="/assets/style/wc-kx-vip.sjc-0-secure.v199.css" id="style-default">
+		<link rel="import" stylesheet"text/css" href="/assets/style/wc-kx-vip.sjc-0-secure.v199.css">
 		<link rel="manifest" href="/manifest.json">
-		<meta name="trustedsite-verification" content="19f288f1abb701a48f3bcb8c22627864">
 	<head id="Head">
+		<meta name="trustedsite-verification" content="19f288f1abb701a48f3bcb8c22627864">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta property="twitter:account_id" content="44608081">
+		<meta property="twitter:account_id" content="1">
 		<title> Adaptive UI for building Windows 10 apps - UI for UWP </title>
 		<link rel="shortcut icon" href="/favicon.ico?v=rebv1">
 		<link href="https://plus.google.com/+telerik/" rel="publisher">
@@ -130,6 +131,7 @@
 			(function() {
 		    var jqueryXhrModified = false;
 		    var detectjs = false;
+		    var React = require('react');	
 		    var executeDataIntelligenceScript = function() { if(!isOptanonGroupActive("2")) return;
 		        var source;
 		        if (!window.JSON) {
