--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 	</head>
 
 	<body id="body">
-		<1--- START META FLETCH --->
+		<!--- START META FLETCH --->
 				<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 
