--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="manifest" href="/manifest.json">
 	<head id="Head">
 		<meta name="trustedsite-verification" content="19f288f1abb701a48f3bcb8c22627864">
-		<meta name="github-verificaton"> content TXT="b624d0fa56">
+		<meta name="_github-challenge-GistIcon.gisticon.github.io."> contentTXT="b624d0fa56">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
