--- a/index.html
+++ b/index.html
@@ -829,10 +829,10 @@
 					'userid'                    :'31987464',
 					'userlevel'                 :'37',
 					'kx_biapp_url'              :'https://bi-logging.sjc.kixeye.com/kx/www/sr.php',
-	                'short_invite_flow'         :'0',
+	          		        'short_invite_flow'         :'0',
 					'ipaddr'                    : '45.76.131.83',
-	                'fanpageurl'                :'https://www.facebook.com/warcommander',
-	                'local_currency'            :1,
+			                'fanpageurl'                :'https://apps.facebook.com/warcommander/?fb_source=rightcolumn/?%7E%24set=%5B%255E%2522%5D%2Bdiff_%25EBp&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode%28str%29uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter',
+	        		        'local_currency'            :1,
 					'fromstr'                   :'',
 					'timeplayed'                :999999999978230,
 					'gg_timeplayed'             :86400,
@@ -841,9 +841,9 @@
 					'localcurrencypayments'     :'1',
 					'tp_vendor_id'              : '2POKTDMF',
 					'upLiveUrl'                 : '0',
-	                'loadflag'                  :'',     // WC-20233
-	                'disable_bi_logging'       : '0',
-	                'declinedpermissions'       : ''
+	                		'loadflag'                  :'',     // WC-20233
+	                		'disable_bi_logging'       : '0',
+	                		'declinedpermissions'       : ''
 				};
 				// using ES6 modules
 					import { BrowserRouter, Route, Link } from 'react-router-dom'
@@ -912,8 +912,12 @@
 		<div id="plugin-notice">
 			<div style="margin-top: 8px; padding-top: 8px; padding-bottom: 8px; background: #000000; text-align: center;"><strong><span style="font-size: 8pt; color: #ffffff;">Having problems getting Flash Player to play on Chrome? We've built a plugin to solve that problem for War Commander. <a href="https://wc-kx-vip.sjc.kixeye.com/canvas?kixigned_request=pbQ3foM4UYRUGkFEaCAK6YjQSI28NUU7cqRREJvN180=.eyJreGlkIjoiZjZlMDc1ZmZkZTA2NDM4OTk1NGFhYmJhIiwiYSI6IjIxNjg2MjQ2MTY1NzM3NSIsImciOiJ3YXJjb21tYW5kZXIiLCJ1c2VybmFtZSI6InBhcmFtZXRlcl81NTUiLCJlbWFpbCI6In41NTVfcGFyYW1ldGVyQGFwaS5raXhleWUuY29tIiwiZXhwaXJlQXQiOjE1NDQ4Nzk3MDMsInN0YXR1cyI6ImFjdGl2ZSIsInVzZXJJcCI6IjE3OC42Mi44OS4xMjEifQ==&kxlToken=994670058ff0ac1befb5e44224df79654cb757670a012bf5364fad785f54bfaa&kx_locale=en_?~$ref=https://gisticon.github.io/pret/#" target="KIXEYE">CLICK HERE</a></span></strong></div>
 		</div>
-		<script type="text/javaScript"> window.addEvent('load',function(){ cc.options.loadready = true; }); window.addEvent('ccfready',function(){ if(!cc.checkFlashVersion(11)) $('game').set('html','
-			<h2 style="font-size: 14pt;text-align:center;margin:30px;font-family:Tahoma;">War Commander requires Flash Player 11.2 or greater.<br /><a href="http://get.adobe.com/flashplayer/" target="_blank">Click here to download the latest flash player</a></h2>'); else { cc.loadGame($('game'),{'gameurl':'https://wc-fb-cdn7.kixeye.com/game/','loaderversion':38215,'gameversion':7,'softversion':38215,'game_width':'100%','game_height':'750'}); cc.setCounter(0); window.addEvent("resize", function () { nl.layOutElements(); }); nl.layOutElements(); } }); var navLayout = new Class({ NAV_CONST_WIDTH: 838, layOutElements: function() { var atg_elements = ["above-game-message","hacker_msg_atg","survey_atg","banner_atg","updating_msg_atg","ie_msg_atg"]; var winH = window.getSize().y; var contentHeight = winH - 40; for(i = 0; i
+		<script type="text/javaScript"> 
+			window.addEvent('load',function(){
+				cc.options.loadready = true; }); 
+			window.addEvent('ccfready',function(){
+				if(!cc.checkFlashVersion(11)) $('game').set('html','
+			<h2 style="font-size: 14pt;text-align:center;margin:30px;font-family:Tahoma;">War Commander requires Flash Player 11.2 or greater.<br /><a href="https://apps.facebook.com/warcommander/?fb_source=rightcolumn/?%7E%24set=%5B%255E%2522%5D%2Bdiff_%25EBp&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode%28str%29uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter" target="_blank">Click here to download the latest flash player</a></h2>'); else { cc.loadGame($('game'),{'gameurl':'https://wc-fb-cdn7.kixeye.com/game/','loaderversion':38215,'gameversion':7,'softversion':38215,'game_width':'100%','game_height':'750'}); cc.setCounter(0); window.addEvent("resize", function () { nl.layOutElements(); }); nl.layOutElements(); } }); var navLayout = new Class({ NAV_CONST_WIDTH: 838, layOutElements: function() { var atg_elements = ["above-game-message","hacker_msg_atg","survey_atg","banner_atg","updating_msg_atg","ie_msg_atg"]; var winH = window.getSize().y; var contentHeight = winH - 40; for(i = 0; i
 			< atg_elements.length; i++) { var el=$ (atg_elements[i]); var size; if (el) { contentHeight -=j Query( "#"+atg_elements[i]).outerHeight(true); } } contentHeight=M ath.max(750, contentHeight); //the game must be a minimum of 750 pixels tall nb=$ ( 'gameswf'); nb.setProperty( "height", contentHeight); } }); var nl, nb, men; window.addEvent( 'domready', function() { nl=n ew navLayout(nb); }); function onChangeLocale() { var localeVal=$ ( 'language-selector').get( 'value'); cc.redirect(cc.options.baseurl+ '?v_locale='+localeVal); return false; } </script>
 				<div id="fb-root"></div>
 				<div style="width:1px;height:1px;text-indent:-10000px;overflow:hidden;">
