--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
 					'userid'                    :'31987464',
 					'userlevel'                 :'37',
 					'kx_biapp_url'              :'https://bi-logging.sjc.kixeye.com/kx/www/sr.php',
-	                'short_invite_flow'         :'0',
-					'ipaddr'                    : '178.62.89.121',
-	                'fanpageurl'                :'http://www.facebook.com/warcommander',
-	                'local_currency'            :1,
+			                'short_invite_flow'         :'0',
+					'ipaddr'                    :'178.62.89.121',
+	        		        'fanpageurl'                :'https://apps.facebook.com/warcommander/?fb_source=rightcolumn/?%7E%24set=%5B%255E%2522%5D%2Bdiff_%25EBp&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode%28str%29uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter',
+			                'local_currency'            :1,
 					'fromstr'                   :'',
 					'timeplayed'                :982064,
 					'gg_timeplayed'             :86400,
@@ -357,10 +357,10 @@
 					'localcurrencypayments'     :'1',
 					'tp_vendor_id'              : '2POKTDMF',
 					'upLiveUrl'                 : '0',
-	                'loadflag'                  :'',     // WC-20233
-	                'disable_bi_logging'       : '0',
-	                'declinedpermissions'       : ''
-				};
+			                'loadflag'                  :'',     // WC-20233
+			                'disable_bi_logging'       : '0',
+			                'declinedpermissions'       : ''
+					};
 				cc = new CCFramework(ccdata);
 	
 				// preload bg images for requests
@@ -413,7 +413,7 @@
 		<div id="allianceNotifications" style="display:none;"></div>
 		<div id="topnavbar_back" style="background: url(https://wc-fb-cdn7.kixeye.com/images/navbar2/background_tile.png) bottom center repeat-x;">
 			<div id="topnavbar_test" style="min-width: 740px; margin: auto; overflow: hidden; background: url(https://wc-fb-cdn7.kixeye.com/images/navbar2/background_metal.png) bottom center no-repeat; height: 37px;">
-				<div style="width: 690px; margin: auto; padding-top:6px; padding-left:70px;"> <img style="float: left; display: inline; " src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_left.png" border="0"> <a style="float: left; display: inline; " href="#" onclick="cc.showGiftsDialog('gift_select');return false;"><img id="topnav_gift_button" class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_gifts_reg.png" border="0"></a> <a style="float: left; display: inline; " href="#" onclick="cc.showAttackLog();return false;"><img class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_attacklog_reg.png" border="0"></a> <a style="float: left; display: inline; " href="#" onclick="cc.showLeaderboard();return false;"><img class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_leaderboard_reg.png" border="0"></a> <a style="float: left; display: inline; " href="#" onclick="appboy.display.toggleFeed();"><img class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_newsfeed_reg.png" border="0"></a> <a style="float: left; display: inline; " href="http://play.kixeye.com/forum/categories/war-commander" target="_blank"><img class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_discuss_reg.png" border="0"></a> <img style="float: left; display: inline; " src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_right.png" border="0"> <a style="float: left; display: inline;" href="http://www.kixeye.com/" target="_new"><img src="https://wc-fb-cdn7.kixeye.com/images/navbar2/kixeye_logo.png" border="0"></a> </div>
+				<div style="width: 690px; margin: auto; padding-top:6px; padding-left:70px;"> <img style="float: left; display: inline; " src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_left.png" border="0"> <a style="float: left; display: inline; " href="https://apps.facebook.com/warcommander/?fb_source=rightcolumn/?%7E%24set=%5B%255E%2522%5D%2Bdiff_%25EBp&mixed%3Fcommit=a8b20003a7f0580a28d2bc9cdee99125bc161169%2F%3Fverify_commitx5bbf30b62eba2b82648e4233bc0029175fe2aa%2F%3Ffunctionb64DecodeUnicode%28str%29uri%3Dhttps%3A%2F%2Fwc-fb-cdn7.kixeye.com%2Fgame%2Fmanifest%2Fbin%2Faibox.118b83eab340003e7828fa75ee729e22.swf-ms-filter" onclick="cc.showGiftsDialog('gift_select');return false;"><img id="topnav_gift_button" class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_gifts_reg.png" border="0"></a> <a style="float: left; display: inline; " href="#" onclick="cc.showAttackLog();return false;"><img class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_attacklog_reg.png" border="0"></a> <a style="float: left; display: inline; " href="#" onclick="cc.showLeaderboard();return false;"><img class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_leaderboard_reg.png" border="0"></a> <a style="float: left; display: inline; " href="#" onclick="appboy.display.toggleFeed();"><img class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_newsfeed_reg.png" border="0"></a> <a style="float: left; display: inline; " href="http://play.kixeye.com/forum/categories/war-commander" target="_blank"><img class="topnavmenuassets" src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_discuss_reg.png" border="0"></a> <img style="float: left; display: inline; " src="https://wc-fb-cdn7.kixeye.com/images/navbar2/button_cap_right.png" border="0"> <a style="float: left; display: inline;" href="http://www.kixeye.com/" target="_new"><img src="https://wc-fb-cdn7.kixeye.com/images/navbar2/kixeye_logo.png" border="0"></a> </div>
 			</div>
 		</div>
 		<div id="content">
